fix image alignment

--- a/Lesson02/design-principles-small.css
+++ b/Lesson02/design-principles-small.css
@@ -21,6 +21,7 @@ img {
     display: block;
     margin-left: auto;
     margin-right: auto;
+    max-width: 40px;
 }
 
 header, footer {
